--- a/index.html
+++ b/index.html
@@ -35,6 +35,19 @@
                 </li>
             </ul>
         </div>
+        <div class="col">
+            <ul class="nav justify-content-center">
+                <a href="#">
+                    <img src="logoipsum-logo-25.svg">
+                </a>
+            </ul>
+        </div>
+        <div class="col">
+            <form class="d-flex">
+                <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+                <button class="btn btn-outline-success" type="submit">Search</button>
+              </form>
+        </div>
     </div>
     <!-- Option 1: Bootstrap Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
