--- a/products-layout.html
+++ b/products-layout.html
@@ -6,30 +6,69 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
+
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
     <script src="https://kit.fontawesome.com/1effb14234.js" crossorigin="anonymous"></script>
     <style type="text/css">
+        .button {
+            background-color: red;
+            border: none;
+            color: white;
+            padding: 5px 20px;
+            text-align: center;
+            text-decoration: none;
+            display: inline-block;
+            font-size: 16px;
+            margin: 4px 2px;
+            transition-duration: 0.4s;
+            cursor: pointer;
+            border-radius: 50px;
 
+        }
 
+        .button1 {
+            background-color: white;
+            color: black;
+            border: 2px solid crimson;
+        }
+
+        .button1:hover {
+            background-color: red;
+            color: white;
+        }
+
+        @media (min-width: 768px) {
+            .sidemenu button {
+                margin-top: 30px;
+            }
+        }
     </style>
 </head>
 
 <body>
 
-    <div class="container">
-        <div class="row">
+    <div class="container-fluid">
+        <div class="row mt-5">
             <div class="col-12">
                 <h1>Animals</h1>
             </div>
         </div>
 
-        <div class="row">
-            <div class=" col-12 col-md-3">
+        <div class="row mt-5">
+            <!-- sidemenu -->
+            <div class=" col-12 col-md-3 sidemenu">
                 <h2>Choose your category</h2>
+                <button class="button button1 d-md-block">Puppies</button>
+                <button class="button button1 d-md-block">Dogs</button>
+                <button class="button button1 d-md-block">Kittens</button>
+                <button class="button button1 d-md-block">Bears</button>
             </div>
+
+
+            <!-- right part -->
             <div class="col-12 col-md-9">
                 <h2>Categories</h2>
             </div>
