--- a/footer.html
+++ b/footer.html
@@ -1,1 +1,31 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Footer</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" 
+integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+</head>
+<body>
+    <div class="container-fluid">
+        <div class="row bg-opacity-10 p-3">
+            <div class="col">
+                <div class="fs-1 fw-bold p-3 text-warning">Informatii</div>
+                <div class="fs-4 p-1 text-primary">Cum cumpar</div>
+                <div class="fs-4 p-1 text-primary" >Cum platesc</div>
+                <div class="fs-4 p-1 text-primary" >Livrarea comenzilor</div>
+                <div class="fs-4 p-1 text-primary">Garantii si servicii</div>
+                <div class="fs-4 p-1 text-primary">Returnarea in 30 de zile</div>
+                <div class="fs-4 p-1 text-primary">Termeni si conditii</div>
+                <div class="fs-4 p-1 text-primary">Prelucrarea datelor cu caracter personal</div>
+              </div>
+        </div>
+    </div>
+    
+</body>
+</html>
+
+
 
