adding right section

--- a/products-layout.html
+++ b/products-layout.html
@@ -6,7 +6,6 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
@@ -45,12 +44,16 @@
                 margin-top: 30px;
             }
         }
+
+        .animal-img {
+            padding-bottom: 20px;
+        }
     </style>
 </head>
 
 <body>
 
-    <div class="container-fluid">
+    <div class="container-fluid pb-5">
         <div class="row mt-5">
             <div class="col-12">
                 <h1>Animals</h1>
@@ -68,9 +71,112 @@
             </div>
 
 
-            <!-- right part -->
             <div class="col-12 col-md-9">
-                <h2>Categories</h2>
+                <!-- right part -->
+
+                <div class="d-flex title row align-items-center pb-4">
+                    <div class="col-12 pb-3">
+                        <h2><i class="fas fa-paw"></i><i class="fas fa-paw"></i>Puppies<i class="fas fa-paw"></i><i
+                                class="fas fa-paw"></i></h2>
+
+                    </div>
+
+                    <div class="row">
+                        <div class="col-6 col-md-3">
+                            <img src="https://place-puppy.com/300x300" class="img-fluid animal-img">
+
+                        </div>
+                        <div class="col-6 col-md-3">
+                            <img src="https://place-puppy.com/300x301" class="img-fluid animal-img">
+
+                        </div>
+                        <div class="col-6 col-md-3">
+                            <img src="https://place-puppy.com/301x300" class="img-fluid animal-img">
+
+                        </div>
+                        <div class="col-6 col-md-3">
+                            <img src="https://place-puppy.com/302x300" class="img-fluid animal-img">
+
+                        </div>
+
+                    </div>
+
+                    <div class="col-12 pb-3 pt-3">
+                        <h2><i class="fas fa-paw"></i><i class="fas fa-paw"></i>Dogs<i class="fas fa-paw"></i><i
+                                class="fas fa-paw"></i></h2>
+
+                    </div>
+
+                    <div class="row">
+                        <div class="col-6 col-md-3">
+                            <img src="https://place.dog/300/300" class="img-fluid animal-img">
+
+                        </div>
+                        <div class="col-6 col-md-3">
+                            <img src="https://place.dog/301/300" class="img-fluid animal-img">
+                        </div>
+                        <div class="col-6 col-md-3">
+                            <img src="https://place.dog/300/301" class="img-fluid animal-img">
+
+                        </div>
+                        <div class="col-6 col-md-3">
+                            <img src="https://place.dog/302/300" class="img-fluid animal-img">
+
+                        </div>
+
+                    </div>
+
+                    <div class="col-12 pb-3 pt-3">
+                        <h2><i class="fas fa-paw"></i><i class="fas fa-paw"></i>Kittens<i class="fas fa-paw"></i><i
+                                class="fas fa-paw"></i></h2>
+
+                    </div>
+
+                    <div class="row">
+                        <div class="col-6 col-md-3">
+                            <img src="https://placekitten.com/300/300" class=" animal-img img-fluid">
+
+                        </div>
+                        <div class="col-6 col-md-3">
+                            <img src="https://placekitten.com/301/303" class=" animal-img img-fluid">
+                        </div>
+                        <div class="col-6 col-md-3">
+                            <img src="https://placekitten.com/300/301" class=" animal-img img-fluid">
+
+                        </div>
+                        <div class="col-6 col-md-3">
+                            <img src="https://placekitten.com/302/300" class="img-fluid animal-img">
+
+                        </div>
+
+                    </div>
+
+                    <div class="col-12 pb-3 pt-3">
+                        <h2><i class="fas fa-paw"></i><i class="fas fa-paw"></i>Bears<i class="fas fa-paw"></i><i
+                                class="fas fa-paw"></i></h2>
+
+                    </div>
+
+                    <div class="row">
+                        <div class="col-6 col-md-3">
+                            <img src="https://placebear.com/300/300" class="img-fluid animal-img">
+
+                        </div>
+                        <div class="col-6 col-md-3">
+                            <img src="https://placebear.com/301/303" class="img-fluid animal-img">
+                        </div>
+                        <div class="col-6 col-md-3">
+                            <img src="https://placebear.com/300/301" class="img-fluid animal-img">
+
+                        </div>
+                        <div class="col-6 col-md-3">
+                            <img src="https://placebear.com/302/300" class="img-fluid animal-img">
+
+                        </div>
+
+                    </div>
+
+                </div>
             </div>
         </div>
 
