adding servicii clienti

--- a/footer.html
+++ b/footer.html
@@ -11,16 +11,25 @@ integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jI
 <body>
     <div class="container-fluid">
         <div class="row bg-opacity-10 p-3">
+
             <div class="col">
                 <div class="fs-1 fw-bold p-3 text-warning">Informatii</div>
-                <div class="fs-4 p-1 text-primary">Cum cumpar</div>
+                <a href="#" class="text-decoration-none"><div class="fs-4 p-1 text-primary">Cum cumpar</div>
                 <div class="fs-4 p-1 text-primary" >Cum platesc</div>
                 <div class="fs-4 p-1 text-primary" >Livrarea comenzilor</div>
                 <div class="fs-4 p-1 text-primary">Garantii si servicii</div>
                 <div class="fs-4 p-1 text-primary">Returnarea in 30 de zile</div>
                 <div class="fs-4 p-1 text-primary">Termeni si conditii</div>
-                <div class="fs-4 p-1 text-primary">Prelucrarea datelor cu caracter personal</div>
-              </div>
+                <div class="fs-4 p-1 text-primary">Prelucrarea datelor cu caracter personal</div> </a>
+            </div>
+
+            <div class="col">
+                <div class="fs-1 fw-bold p-3 text-warning"> Servicii Clienti</div>
+                <a href="#" class="text-decoration-none"><div class="fs-4 p-1 text-primary">Contact</div>
+                <div class="fs-4 p-1 text-primary"> Returnari</div></a>
+            </div>
+
+
         </div>
     </div>
     
