--- a/footer.html
+++ b/footer.html
@@ -29,6 +29,25 @@ integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jI
                 <div class="fs-4 p-1 text-primary"> Returnari</div></a>
             </div>
 
+            <div class="col">
+                <div class="fs-1 fw-bold p-3 text-warning">Newsletter</div>
+                <form class="row g-3">
+                    <div class="col-auto">
+                      <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="Introdu adresa de e-mail">
+                    </div>
+                    <div class="col-auto">
+                      <button type="submit" class="btn btn-warning mb-3">Abonare</button>
+                    </div>
+
+                    <div class="col-auto">
+                        <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="Introdu adresa de e-mail">
+                      </div>
+                      <div class="col-auto">
+                        <button type="submit" class="btn btn-warning mb-3">Dezabonare</button>
+                      </div>
+                  </form>
+            </div>
+
 
         </div>
     </div>
