--- a/footer.html
+++ b/footer.html
@@ -7,26 +7,32 @@
     <title>Footer</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" 
 integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+
+    <style type="text/css">
+        .container-fluid {
+            background-color: #202738;
+        }
+    </style>
 </head>
 <body>
-    <div class="container-fluid">
+    <div class="container-fluid p-3">
         <div class="row bg-opacity-10 p-3">
 
             <div class="col">
                 <div class="fs-1 fw-bold p-3 text-warning">Informatii</div>
-                <a href="#" class="text-decoration-none"><div class="fs-4 p-1 text-primary">Cum cumpar</div>
-                <div class="fs-4 p-1 text-primary" >Cum platesc</div>
-                <div class="fs-4 p-1 text-primary" >Livrarea comenzilor</div>
-                <div class="fs-4 p-1 text-primary">Garantii si servicii</div>
-                <div class="fs-4 p-1 text-primary">Returnarea in 30 de zile</div>
-                <div class="fs-4 p-1 text-primary">Termeni si conditii</div>
-                <div class="fs-4 p-1 text-primary">Prelucrarea datelor cu caracter personal</div> </a>
+                <a href="#" class="text-decoration-none"><div class="fs-4 p-1 text-white">Cum cumpar</div>
+                <div class="fs-4 p-1 text-white" >Cum platesc</div>
+                <div class="fs-4 p-1 text-white" >Livrarea comenzilor</div>
+                <div class="fs-4 p-1 text-white">Garantii si servicii</div>
+                <div class="fs-4 p-1 text-white">Returnarea in 30 de zile</div>
+                <div class="fs-4 p-1 text-white">Termeni si conditii</div>
+                <div class="fs-4 p-1 text-white">Prelucrarea datelor cu caracter personal</div> </a>
             </div>
 
             <div class="col">
                 <div class="fs-1 fw-bold p-3 text-warning"> Servicii Clienti</div>
-                <a href="#" class="text-decoration-none"><div class="fs-4 p-1 text-primary">Contact</div>
-                <div class="fs-4 p-1 text-primary"> Returnari</div></a>
+                <a href="#" class="text-decoration-none"><div class="fs-4 p-1 text-white">Contact</div>
+                <div class="fs-4 p-1 text-white"> Returnari</div></a>
             </div>
 
             <div class="col">
@@ -47,8 +53,6 @@ integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jI
                       </div>
                   </form>
             </div>
-
-
         </div>
     </div>
     
